# DiscoveryProject

./: .gitignore  .pylintrc  README.md  program.py  pyproject.toml
.github/workflows/: main.yml  publish_package.yml  test_and_lint.yml
dataframe_match_module/: data_frame_matcher.py
dataframe_match_module/type_matchers/: noop_type_matcher.py  temperature_type_matcher.py  type_matcher.py
discovery/: discovery.py  discovery_client.py  visualizer.py
discovery/data_matching/: data_match_interface.py  dataframe_matcher.py
discovery/data_matching/matching_methods/: match_column_name_lcs.py  match_column_name_levenshtein.py  match_column_name_wordnet.py  match_data_dynamic_time_warping.py  match_data_pearson_coefficient.py  match_data_two_sample_t_test.py  match_identical_column_names.py  match_identical_rows.py
discovery/fakedata/: fake_data_generator.py  project.py
discovery/metadata/: __init__.py  catalogue_item.py  catalogue_item_builders.py  catalogue_metadata.py  metadata_json_handler.py
discovery/sandbox/: run_augmented_dickey_fuller.py  run_dataframe_matcher.py  run_dynamic_time_warping.py  run_metadata_builder.py  run_sin_wave_similarity.py
discovery/test/unit_tests/: test_detection.py  test_wordnet_pearson_matching.py
discovery/utils/: custom_exceptions.py  data_read.py  dataframe_matcher.py  file_handler.py  metadata.py  metadata_enums.py  split_csv.py  split_data.py  split_data_csv.py  split_datatypes.py  visualizer.py
discovery/utils/data_readers/: __init__.py  catalogue_data.py  local_csv_reader.py
discovery/utils/metadata/: metadata.py  (+4 more)
mock_filesystem/: new_test_0.csv  new_test_0_split_0.csv  new_test_0_split_1.csv  new_test_0_split_2.csv  new_test_0_split_3.csv  new_test_0_split_4.csv  new_test_1.csv
rapid_discovery/: Cargo.toml
rapid_discovery/src/: main.rs
rust_utils/: Cargo.toml  pyproject.toml
rust_utils/src/: bin.rs  daemon_client.rs  daemon_common.rs  daemon_server.rs  hashing.rs  lib.rs
test/: datagen.py
test/sandbox/: daemon_runner.py  run_augmented_dickey_fuller.py  run_dataframe_matcher.py  run_dynamic_time_warping.py  run_file_hasher.py  run_metadata_builder.py  run_metadata_rw.py  run_sin_wave_similarity.py  run_tag_matcher.py  run_temperature_trend_analysis.py  setup.py  tags_map.py
test/unit_tests/: test_detection.py
(+28 files in other folders)
