[project]
name = ""
version = ""
description = ""
authors = [
    {name = "MII", email = "mnel.jnr@gmail.com"},
]
dependencies = [
    "pandas>=1.5.0",
    "Levenshtein>=0.20.5",
]
requires-python = ">=3.10"
license = {text = "MIT"}

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool]
[tool.pdm]
