[package]
name = "rust_utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rust_utils"
path = "src/lib.rs"
crate-type = ["cdylib", "lib"]

[[bin]]
name = "runner"
path = "src/bin.rs"

[dependencies]
pyo3 = { version = "0.17.1", features = ["extension-module"] }
crc32fast = "1.3.2"
adler32 = "1.2.0"
fletcher = "0.3.0"
rayon = "1.6.0"
tokio-uring = { version = "0.4.0" }
threadpool = "1.8.1"
async-std = "1.12.0"
nix = "0.26.1"
rand = "0.8.5"
bincode = "1.3.3"
serde = { version = "1.0.149", features = ["derive"] }
inotify = "0.10"
